// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<DialogModalExample>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="1120"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should mount an open dialogModal 1`] = `
<DialogModalExample>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="1120"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should mount an open dialogModal 320 width 1`] = `
<DialogModalExample
  width="320"
>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="320"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should mount an open dialogModal 960 width 1`] = `
<DialogModalExample
  width="960"
>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="960"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should mount an open dialogModal 1280 width 1`] = `
<DialogModalExample
  width="1280"
>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="1280"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should mount an open dialogModal 1600 width 1`] = `
<DialogModalExample
  width="1600"
>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="1600"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should mount an open dialogModal 1600 width 2`] = `
<DialogModalExample
  width="1600"
>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="1600"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should set the rootSelector 1`] = `
<DialogModalExample
  rootSelector="#myroot"
>
  <div>
    <DialogModal
      ariaLabel="Dialog Modal Example"
      closeOnOutsideClick={false}
      footer={
        <ActionFooter
          start="Footer Goes here"
        />
      }
      header={
        <InjectIntl(ActionHeader)
          onClose={[Function]}
          title="Action Header used here"
        />
      }
      isOpen={false}
      onRequestClose={[Function]}
      rootSelector="#root"
      width="1120"
    />
    <Button
      isBlock={false}
      isCompact={false}
      isDisabled={false}
      isIconOnly={false}
      isLeftAligned={false}
      isReversed={false}
      onClick={[Function]}
      text="Trigger Dialog Modal"
      type="button"
      variant="neutral"
    >
      <button
        aria-disabled={false}
        className="button neutral"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        type="button"
      >
        <span
          className="button-label-win text-only"
        >
          <span
            className=""
          >
            Trigger Dialog Modal
          </span>
        </span>
      </button>
    </Button>
  </div>
</DialogModalExample>
`;

exports[`should shallow an open dialogModal 1`] = `
<div>
  <DialogModal
    ariaLabel="Dialog Modal Example"
    closeOnOutsideClick={false}
    footer={
      <ActionFooter
        start="Footer Goes here"
      />
    }
    header={
      <InjectIntl(ActionHeader)
        onClose={[Function]}
        title="Action Header used here"
      />
    }
    isOpen={false}
    onRequestClose={[Function]}
    rootSelector="#root"
    width="1120"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
      Maecenas molestie in lorem vel facilisis. Quisque ac enim nec lectus malesuada faucibus.
      Integer congue feugiat ultricies.
       Nunc non mauris sed tellus cursus vestibulum nec quis ipsum.
      Vivamus ornare magna justo, et volutpat tortor congue ut. Nulla facilisi.
       Cras in venenatis turpis. Nullam id odio justo. Etiam vehicula lectus vel purus consectetur cursus id sit amet diam.
      Donec facilisis dui non orci hendrerit pharetra. Suspendisse blandit dictum turpis, in consectetur ipsum hendrerit eget.
      Nam vehicula, arcu vitae egestas porttitor,
      turpis nisi pulvinar neque, ut lacinia urna purus sit amet elit.
    </p>
  </DialogModal>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isLeftAligned={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger Dialog Modal"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow an open dialogModal 320 width 1`] = `
<div>
  <DialogModal
    ariaLabel="Dialog Modal Example"
    closeOnOutsideClick={false}
    footer={
      <ActionFooter
        start="Footer Goes here"
      />
    }
    header={
      <InjectIntl(ActionHeader)
        onClose={[Function]}
        title="Action Header used here"
      />
    }
    isOpen={false}
    onRequestClose={[Function]}
    rootSelector="#root"
    width="320"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
      Maecenas molestie in lorem vel facilisis. Quisque ac enim nec lectus malesuada faucibus.
      Integer congue feugiat ultricies.
       Nunc non mauris sed tellus cursus vestibulum nec quis ipsum.
      Vivamus ornare magna justo, et volutpat tortor congue ut. Nulla facilisi.
       Cras in venenatis turpis. Nullam id odio justo. Etiam vehicula lectus vel purus consectetur cursus id sit amet diam.
      Donec facilisis dui non orci hendrerit pharetra. Suspendisse blandit dictum turpis, in consectetur ipsum hendrerit eget.
      Nam vehicula, arcu vitae egestas porttitor,
      turpis nisi pulvinar neque, ut lacinia urna purus sit amet elit.
    </p>
  </DialogModal>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isLeftAligned={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger Dialog Modal"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow an open dialogModal 960 width 1`] = `
<div>
  <DialogModal
    ariaLabel="Dialog Modal Example"
    closeOnOutsideClick={false}
    footer={
      <ActionFooter
        start="Footer Goes here"
      />
    }
    header={
      <InjectIntl(ActionHeader)
        onClose={[Function]}
        title="Action Header used here"
      />
    }
    isOpen={false}
    onRequestClose={[Function]}
    rootSelector="#root"
    width="960"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
      Maecenas molestie in lorem vel facilisis. Quisque ac enim nec lectus malesuada faucibus.
      Integer congue feugiat ultricies.
       Nunc non mauris sed tellus cursus vestibulum nec quis ipsum.
      Vivamus ornare magna justo, et volutpat tortor congue ut. Nulla facilisi.
       Cras in venenatis turpis. Nullam id odio justo. Etiam vehicula lectus vel purus consectetur cursus id sit amet diam.
      Donec facilisis dui non orci hendrerit pharetra. Suspendisse blandit dictum turpis, in consectetur ipsum hendrerit eget.
      Nam vehicula, arcu vitae egestas porttitor,
      turpis nisi pulvinar neque, ut lacinia urna purus sit amet elit.
    </p>
  </DialogModal>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isLeftAligned={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger Dialog Modal"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow an open dialogModal 1280 width 1`] = `
<div>
  <DialogModal
    ariaLabel="Dialog Modal Example"
    closeOnOutsideClick={false}
    footer={
      <ActionFooter
        start="Footer Goes here"
      />
    }
    header={
      <InjectIntl(ActionHeader)
        onClose={[Function]}
        title="Action Header used here"
      />
    }
    isOpen={false}
    onRequestClose={[Function]}
    rootSelector="#root"
    width="1280"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
      Maecenas molestie in lorem vel facilisis. Quisque ac enim nec lectus malesuada faucibus.
      Integer congue feugiat ultricies.
       Nunc non mauris sed tellus cursus vestibulum nec quis ipsum.
      Vivamus ornare magna justo, et volutpat tortor congue ut. Nulla facilisi.
       Cras in venenatis turpis. Nullam id odio justo. Etiam vehicula lectus vel purus consectetur cursus id sit amet diam.
      Donec facilisis dui non orci hendrerit pharetra. Suspendisse blandit dictum turpis, in consectetur ipsum hendrerit eget.
      Nam vehicula, arcu vitae egestas porttitor,
      turpis nisi pulvinar neque, ut lacinia urna purus sit amet elit.
    </p>
  </DialogModal>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isLeftAligned={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger Dialog Modal"
    type="button"
    variant="neutral"
  />
</div>
`;

exports[`should shallow an open dialogModal 1600 width 1`] = `
<div>
  <DialogModal
    ariaLabel="Dialog Modal Example"
    closeOnOutsideClick={false}
    footer={
      <ActionFooter
        start="Footer Goes here"
      />
    }
    header={
      <InjectIntl(ActionHeader)
        onClose={[Function]}
        title="Action Header used here"
      />
    }
    isOpen={false}
    onRequestClose={[Function]}
    rootSelector="#root"
    width="1600"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
      Maecenas molestie in lorem vel facilisis. Quisque ac enim nec lectus malesuada faucibus.
      Integer congue feugiat ultricies.
       Nunc non mauris sed tellus cursus vestibulum nec quis ipsum.
      Vivamus ornare magna justo, et volutpat tortor congue ut. Nulla facilisi.
       Cras in venenatis turpis. Nullam id odio justo. Etiam vehicula lectus vel purus consectetur cursus id sit amet diam.
      Donec facilisis dui non orci hendrerit pharetra. Suspendisse blandit dictum turpis, in consectetur ipsum hendrerit eget.
      Nam vehicula, arcu vitae egestas porttitor,
      turpis nisi pulvinar neque, ut lacinia urna purus sit amet elit.
    </p>
  </DialogModal>
  <Button
    isBlock={false}
    isCompact={false}
    isDisabled={false}
    isIconOnly={false}
    isLeftAligned={false}
    isReversed={false}
    onClick={[Function]}
    text="Trigger Dialog Modal"
    type="button"
    variant="neutral"
  />
</div>
`;
